Moved simple view to layout bundle.

--- a/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
+++ b/src/Club/InstallerBundle/Resources/views/Installer/confirm.html.twig
@@ -1,4 +1,4 @@
-{% extends "ClubInstallerBundle::base.html.twig" %}
+{% extends "ClubLayoutBundle:Default:base_simple.html.twig" %}
 
 {% block body %}
 <h2>{% trans %}Congratulations{% endtrans %}</h2>
