--- a/src/Club/WelcomeBundle/Resources/views/Blog/form.html.twig
+++ b/src/Club/WelcomeBundle/Resources/views/Blog/form.html.twig
@@ -1,6 +1,8 @@
   <fieldset>
     <legend>{% trans %}Post blog{% endtrans %}</legend>
 
+    <p>{% trans %}You are welcome to post anything to the other members here. The post will end up on the frontpage.{% endtrans %}</p>
+
     {{ form_row(form.title) }}
     <p>
       {{ form_label(form.message) }}
