Added game form.

--- a/src/Club/RankingBundle/Resources/views/AdminGame/new.html.twig
+++ b/src/Club/RankingBundle/Resources/views/AdminGame/new.html.twig
@@ -1,9 +1,9 @@
-{% extends "ClubTeamBundle::base.html.twig" %}
+{% extends "ClubRankingBundle::base.html.twig" %}
 
 {% block body %}
 
-<form method="post" action="{{ path('club_team_adminlevel_new') }}">
-{% include "ClubTeamBundle:AdminLevel:form.html.twig" with {'form': form} %}
+<form method="post" action="{{ path('club_ranking_admingame_new') }}">
+{% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
 {% endblock %}
