--- a/src/Club/RankingBundle/Resources/views/AdminRule/edit.html.twig
+++ b/src/Club/RankingBundle/Resources/views/AdminRule/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_ranking_admingame_edit', {'id':game.id}) }}">
+<form method="post" action="{{ path('club_ranking_adminrule_edit', {'id':rule.id}) }}">
 {% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
