--- a/src/Club/RankingBundle/Resources/views/AdminGame/index.html.twig
+++ b/src/Club/RankingBundle/Resources/views/AdminGame/index.html.twig
@@ -7,19 +7,23 @@
   <thead>
     <tr>
       <th>{% trans %}Name{% endtrans %}</th>
+      <th>{% trans %}Set{% endtrans %}</th>
+      <th>{% trans %}Locked{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
       <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="3">&#160;</td>
+      <td colspan="5">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for game in games %}
     <tr>
       <td>{{ game.name }}</td>
+      <td>{{ game.gameSet }}</td>
+      <td>{{ game.locked }}</td>
       <td>{{ game.createdAt|club_datetime }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_ranking_admingame_edit', { 'id':game.id })} %}
@@ -28,7 +32,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="3">{% trans %}There are no games.{% endtrans %}</td>
+    <td colspan="5">{% trans %}There are no games.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
