--- a/src/Club/BookingBundle/Resources/views/AdminPlanCategory/edit.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlanCategory/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_booking_adminplan_edit', {'id':plan.id}) }}">
+<form method="post" action="{{ path('club_booking_adminplancategory_edit', {'id':plan_category.id}) }}">
 {% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
