--- a/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
@@ -9,7 +9,7 @@
       <th>{% trans %}Name{% endtrans %}</th>
       <th>{% trans %}Period start{% endtrans %}</th>
       <th>{% trans %}Period end{% endtrans %}</th>
-      <th>{% trans %}First{% endtrans %}</th>
+      <th>{% trans %}Time{% endtrans %}</th>
       <th>{% trans %}End{% endtrans %}</th>
       <th>{% trans %}Action{% endtrans %}</th>
     </tr>
@@ -25,8 +25,8 @@
       <td>{{ plan.planCategory.name }}</td>
       <td>{{ plan.periodStart|club_datetime }}</td>
       <td>{{ plan.periodEnd|club_datetime }}</td>
-      <td>{{ plan.firstDate|club_time }}</td>
-      <td>{{ plan.endDate|club_time }}</td>
+      <td>{{ plan.firstDate|club_time }} - {{ plan.endDate|club_time }}</td>
+      <td>{{ plan.day|club_day }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_booking_adminplan_edit', { 'plan_category_id':plan.planCategory.id, 'id':plan.id })} %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_booking_adminplan_delete', { 'plan_category_id':plan.planCategory.id, 'id':plan.id })} %}
