--- a/src/Club/DashboardBundle/Resources/views/Dashboard/team_table.html.twig
+++ b/src/Club/DashboardBundle/Resources/views/Dashboard/team_table.html.twig
@@ -14,11 +14,11 @@
     </tr>
   </tfoot>
   <tbody>
-  {% for schedule in schedules %}
+  {% for team in teams %}
     <tr>
-      <td>{{ schedule.team.teamName }}</td>
-      <td>{{ schedule.firstDate|club_date }}</td>
-      <td>{{ schedule.firstDate|club_time }} - {{ schedule.endDate|club_time }}</td>
+      <td>{{ team.team.teamName }}</td>
+      <td>{{ team.firstDate|club_date }}</td>
+      <td>{{ team.firstDate|club_time }} - {{ team.endDate|club_time }}</td>
     </tr>
   {% else %}
   <tr>
