--- a/src/Club/TeamBundle/Resources/views/AdminTeam/index.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminTeam/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "ClubTeamBundle::base.html.twig" %}
 
 {% block body %}
-<p class="box"><a href="{{ path('club_team_adminschedule_new', {'team_id':team.id}) }}" class="btn-create"><span>{% trans %}Create schedule{% endtrans %}</span></a></p>
+<p class="box"><a href="{{ path('club_team_adminteam_new', {'team_id':team.id}) }}" class="btn-create"><span>{% trans %}Create team{% endtrans %}</span></a></p>
 
 <table class="style">
   <thead>
@@ -19,22 +19,22 @@
     </tr>
   </tfoot>
   <tbody>
-  {% for schedule in schedules %}
+  {% for team in teams %}
     <tr>
-      <td>{{ schedule.team.teamName }}</td>
-      <td>{{ schedule.firstDate|club_datetime }}</td>
-      <td>{{ schedule.endDate|club_datetime }}</td>
-      <td>{{ schedule.level.levelName }}</td>
+      <td>{{ team.team.teamName }}</td>
+      <td>{{ team.firstDate|club_datetime }}</td>
+      <td>{{ team.endDate|club_datetime }}</td>
+      <td>{{ team.level.levelName }}</td>
       <td>
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_team_adminschedule_edit', { 'id':schedule.id,'team_id':team.id })} %}
-        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_team_adminschedule_delete', { 'id':schedule.id,'team_id':team.id })} %}
-        {% include "ClubLayoutBundle:Default:repetition_link.html.twig" with {'url':path('club_team_adminrepetition_index', { 'schedule_id':schedule.id,'team_id':team.id })} %}
-        {% include "ClubLayoutBundle:Default:attends_link.html.twig" with {'url':path('club_team_adminschedule_participant', { 'id':schedule.id,'team_id':team.id })} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_team_adminteam_edit', { 'id':team.id,'team_id':team.id })} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_team_adminteam_delete', { 'id':team.id,'team_id':team.id })} %}
+        {% include "ClubLayoutBundle:Default:repetition_link.html.twig" with {'url':path('club_team_adminrepetition_index', { 'team_id':team.id,'team_id':team.id })} %}
+        {% include "ClubLayoutBundle:Default:attends_link.html.twig" with {'url':path('club_team_adminteam_participant', { 'id':team.id,'team_id':team.id })} %}
       </td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="5">{% trans %}There are no schedules.{% endtrans %}</td>
+    <td colspan="5">{% trans %}There are no teams.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
