--- a/src/Club/TeamBundle/Resources/views/AdminTeam/new.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminTeam/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_team_adminteam_new', {'team_id':team.id}) }}">
+<form method="post" action="{{ path('club_team_adminteam_new', {'team_category_id':team_category.id}) }}">
 {% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
