Revert "Renamed team to team_category."
This reverts commit 2abd603fe1b009045c0ab4e0c93184a5c6355aad.

--- a/src/Club/BookingBundle/Resources/views/Overview/information.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/information.html.twig
@@ -18,8 +18,8 @@
       </p>
       {% endif %}
 
-    {% elseif interval.team %}
-      <p><label>{% trans %}Team{% endtrans %}</label>{{ interval.team.team.teamName }}</p>
+    {% elseif interval.schedule %}
+      <p><label>{% trans %}Team{% endtrans %}</label>{{ interval.schedule.team.teamName }}</p>
 
     {% endif %}
 
