--- a/src/Club/BookingBundle/Resources/views/Booking/viewTeam.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/viewTeam.html.twig
@@ -7,10 +7,10 @@
   <legend>{% trans %}Booking Information{% endtrans %}</legend>
   <div class="list">
     <p><label>{% trans %}Location{% endtrans %}</label>{{ field.location.locationName }}</p>
-    <p><label>{% trans %}Date{% endtrans %}</label>{{ team.firstDate|club_date }}</p>
-    <p><label>{% trans %}Time{% endtrans %}</label>{{ team.firstDate|club_time }} - {{ team.endDate|club_time }}</p>
+    <p><label>{% trans %}Date{% endtrans %}</label>{{ schedule.firstDate|club_date }}</p>
+    <p><label>{% trans %}Time{% endtrans %}</label>{{ schedule.firstDate|club_time }} - {{ schedule.endDate|club_time }}</p>
     <p><label>{% trans %}Field{% endtrans %}</label>{{ field.name }}</p>
-    <p><label>{% trans %}Team{% endtrans %}</label>{{ team.team.teamName }}</p>
+    <p><label>{% trans %}Team{% endtrans %}</label>{{ schedule.team.teamName }}</p>
 
     {% if field.information %}
       <h3>{% trans %}Information{% endtrans %}</h3>
