--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/deleteChoice.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/deleteChoice.html.twig
@@ -6,7 +6,7 @@
 
 <p>Would you like to delete only this event, all events in the series or this and all future events in the series?</p>
 
-<p><a href="{{ path('club_team_adminschedule_deleteonce', {'id':schedule.id, 'team_id':schedule.team.id}) }}">Only this instance</a> All other events in the series will be retained.<p>
-<p><a href="{{ path('club_team_adminschedule_deletefuture', {'id':schedule.id, 'team_id':schedule.team.id}) }}">All the following</a> This and all the following events will be deleted.<p>
-<p><a href="{{ path('club_team_adminschedule_deleteall', {'id':schedule.id, 'team_id':schedule.team.id}) }}">All events in the series</a> All events in the series will be deleted.<p>
+<p><a href="{{ path('club_team_adminschedule_deleteonce', {'id':schedule.id, 'team_id':schedule.teamCategory.id}) }}">Only this instance</a> All other events in the series will be retained.<p>
+<p><a href="{{ path('club_team_adminschedule_deletefuture', {'id':schedule.id, 'team_id':schedule.teamCategory.id}) }}">All the following</a> This and all the following events will be deleted.<p>
+<p><a href="{{ path('club_team_adminschedule_deleteall', {'id':schedule.id, 'team_id':schedule.teamCategory.id}) }}">All events in the series</a> All events in the series will be deleted.<p>
 {% endblock %}
