--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/new.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/new.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
 
-<form method="post" action="{{ path('club_team_adminschedule_new', {'team_id':team.id}) }}">
-{% include "ClubTeamBundle:AdminSchedule:form.html.twig" with {'form': form} %}
+<form method="post" action="{{ path('club_team_adminschedule_new', {'category_id':category.id}) }}">
+{% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
 {% endblock %}
