--- a/src/Club/TeamBundle/Resources/views/AdminRepetition/new.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminRepetition/new.html.twig
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-{% include "ClubTeamBundle:AdminRepetition:form.html.twig" with {'path':path('club_team_adminrepetition_new', {'schedule_id':schedule.id,'team_id':schedule.teamCategory.id})} %}
+{% include "ClubTeamBundle:AdminRepetition:form.html.twig" with {'path':path('club_team_adminrepetition_new', {'schedule_id':schedule.id,'category_id':schedule.teamCategory.id})} %}
 
 {% endblock %}
