--- a/src/Club/TeamBundle/Resources/views/AdminSchedule/participant.html.twig
+++ b/src/Club/TeamBundle/Resources/views/AdminSchedule/participant.html.twig
@@ -22,7 +22,7 @@
       <td>{{ schedule.team.teamName }}</td>
       <td>{{ participant.user.profile.name }}</td>
       <td>
-        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_team_adminschedule_unattend', {'team_id':schedule.team.id,'schedule_id':schedule.id, 'id':participant.id})} %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_team_adminschedule_unattend', {'schedule_id':schedule.id, 'id':participant.id})} %}
       </td>
     </tr>
   {% else %}
