--- a/src/Club/TaskBundle/Resources/views/AdminTask/index.html.twig
+++ b/src/Club/TaskBundle/Resources/views/AdminTask/index.html.twig
@@ -34,7 +34,7 @@
       <td>{{ task.nextRunAt|club_datetime }}</td>
       <td>{{ task.taskIntervalPretty }}</td>
       <td>
-        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_task_task_edit', {'id':task.id})} %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_task_admintask_edit', {'id':task.id})} %}
         {% include "ClubLayoutBundle:Default:disable_link.html.twig" with {'url':path('admin_task_disable', {'id':task.id})} %}
         {% include "ClubLayoutBundle:Default:enable_link.html.twig" with {'url':path('admin_task_enable', {'id':task.id})} %}
         {% include "ClubLayoutBundle:Default:run_link.html.twig" with {'url':path('admin_task_run', {'id':task.id})} %}
