Added dynamic dashboard.

--- a/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Club/DashboardBundle/Resources/views/Dashboard/index.html.twig
@@ -9,7 +9,6 @@
   {% endif %}
 </p>
 
-{% include "ClubDashboardBundle:Dashboard:team_table.html.twig" %}
-{% include "ClubDashboardBundle:Dashboard:order_table.html.twig" %}
+{{ output|raw }}
 
 {% endblock %}
