--- a/src/Club/BookingBundle/Resources/views/Dashboard/booking_table.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Dashboard/booking_table.html.twig
@@ -6,17 +6,18 @@
       <th>{% trans %}Date{% endtrans %}</th>
       <th>{% trans %}Time{% endtrans %}</th>
       <th>{% trans %}Partner{% endtrans %}</th>
+      <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="3">&#160;</td>
+      <td colspan="4">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for booking in bookings %}
     <tr>
-      <td>{{ booking.firstDate|club_date }}</td>
+      <td>{{ booking.firstDate|club_date('full') }}</td>
       <td>{{ booking.firstDate|club_time }} - {{ booking.endDate|club_time }}</td>
 
       {% if booking.guest %}
@@ -24,10 +25,13 @@
       {% else %}
       <td>{{ booking.firstPartner }}</td>
       {% endif %}
+      <td>
+        {% include "ClubLayoutBundle:Default:show_link.html.twig" with {'url':path('club_booking_booking_viewbooking', { 'id':booking.id })} %}
+      </td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="3">{% trans %}You have no coming bookings.{% endtrans %}</td>
+    <td colspan="4">{% trans %}You have no coming bookings.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
