--- a/src/Club/BookingBundle/Resources/views/Booking/viewBooking.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Booking/viewBooking.html.twig
@@ -5,7 +5,7 @@
 
 {% include "ClubBookingBundle:Booking:information.html.twig" %}
 
-{% if is_granted('ROLE_BOOKING_ADMIN') or booking.user == app.user %}
+{% if is_granted('ROLE_BOOKING_ADMIN') or booking.isOwner(app.user) %}
   {% include "ClubBookingBundle:Booking:cancel_form.html.twig" %}
 
 {% endif %}
