--- a/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
+++ b/src/Club/BookingBundle/Resources/views/AdminPlan/index.html.twig
@@ -10,7 +10,7 @@
       <th>{% trans %}Period start{% endtrans %}</th>
       <th>{% trans %}Period end{% endtrans %}</th>
       <th>{% trans %}Time{% endtrans %}</th>
-      <th>{% trans %}End{% endtrans %}</th>
+      <th>{% trans %}Day{% endtrans %}</th>
       <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
