--- a/src/Club/BookingBundle/Resources/views/Overview/table.html.twig
+++ b/src/Club/BookingBundle/Resources/views/Overview/table.html.twig
@@ -24,6 +24,7 @@
      <div id="nav_overlay">
       <div id="times"></div> <!-- this is for time periods -->
       <div id="intervals"></div> <!-- this is for intervals -->
+      <div id="bookings"></div> <!-- this is for bookings -->
     </div>
   </div>
 </div>
