Added member list.

--- a/src/Club/UserBundle/Resources/views/Member/index.html.twig
+++ b/src/Club/UserBundle/Resources/views/Member/index.html.twig
@@ -2,6 +2,27 @@
 
 {% block body %}
 
+<h2>{% trans %}Members{% endtrans %}</h2>
+
+<!-- Actions -->
+<form method="post" action="">
+<div class="box-02 bottom box">
+  <div class="f-right">
+    <strong>Sort by:</strong>
+    <select name="" class="input-text">
+      <option value="">Member number</option>
+      <option value="">First name</option>
+      <option value="">Last name</option>
+    </select>
+  </div> <!-- /f-right -->
+  <strong>Search:</strong>
+  <input type="text" name="query" class="input-text" />
+  <input type="submit" value="OK" />
+</div> <!-- /box-02 -->
+</form>
+
+<div class="fix" style="height: 10px;"></div>
+
 <table class="style">
   <thead>
     <tr>
