Fixed team table.

--- a/src/Club/TeamBundle/Resources/views/Dashboard/team_table.html.twig
+++ b/src/Club/TeamBundle/Resources/views/Dashboard/team_table.html.twig
@@ -16,7 +16,7 @@
   <tbody>
   {% for schedule in schedules %}
     <tr>
-      <td>{{ schedule.team.teamName }}</td>
+      <td>{{ schedule.teamCategory.teamName }}</td>
       <td>{{ schedule.firstDate|club_date }}</td>
       <td>{{ schedule.firstDate|club_time }} - {{ schedule.endDate|club_time }}</td>
     </tr>
